--- a/General/Runner/Runner.yml
+++ b/General/Runner/Runner.yml
@@ -5,7 +5,6 @@
       project: Runner.csproj
     readyStateText: Application started.
     waitForExit: true
-
 scenarios:
   runner:
     application:
@@ -28,3 +27,10 @@ profiles:
       application:
         endpoints: 
           - http://asp-perf-win:5001
+scripts:
+    adjust_start_time_win: |
+        benchmarks.jobs.application.results["benchmarks/start-time"] = benchmarks.jobs.application.results["benchmarks/start-time"] - 500;
+        benchmarks.jobs.application.results["benchmarks/start-time"] = benchmarks.jobs.application.results["benchmarks/start-time"] - 500;
+    adjust_start_time_lin: |
+        benchmarks.jobs.application.results["benchmarks/start-time"] = benchmarks.jobs.application.results["benchmarks/start-time"] - 500;
+        benchmarks.jobs.application.results["benchmarks/start-time"] = benchmarks.jobs.application.results["benchmarks/start-time"] - 500;
