--- a/SizeOpts/ConsoleAfter/ConsoleAfter.csproj
+++ b/SizeOpts/ConsoleAfter/ConsoleAfter.csproj
@@ -2,36 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
-    <PublishTrimmed>true</PublishTrimmed>
-    <TrimMode>link</TrimMode>
-    <SuppressTrimAnalysisWarnings>false</SuppressTrimAnalysisWarnings>
-    <_TrimmerDumpDependencies>true</_TrimmerDumpDependencies>
+    <TargetFramework>net462</TargetFramework>
+    <LangVersion>9.0</LangVersion>
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-    <_ExtraTrimmerArgs>--feature System.Text.Json.DisableJsonSerializerDynamicFallback true</_ExtraTrimmerArgs>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Text.Json" Version="6.0.1-JsonCoGen.1.21110.6" />
+    <PackageReference Include="System.Text.Json" Version="6.0.1-JsonCoGen.1.21164.1" />
   </ItemGroup>
-
-  <Target Name="ConfigureTrimming"
-        BeforeTargets="PrepareForILLink">
-    <ItemGroup>
-      <ManagedAssemblyToLink Condition="'%(Filename)' == 'System.Text.Json'">
-        <IsTrimmable>true</IsTrimmable>
-      </ManagedAssemblyToLink>
-    </ItemGroup>
-  </Target>
-
-  <Target Name="FixIncrementalCoreCompileWithAnalyzers" BeforeTargets="CoreCompile">
-    <ItemGroup>
-      <CustomAdditionalCompileInputs Include="@(Analyzer)" />
-    </ItemGroup>
-  </Target>
 
 </Project>
