--- a/SizeOpts/ConsoleBefore/ConsoleBefore.csproj
+++ b/SizeOpts/ConsoleBefore/ConsoleBefore.csproj
@@ -9,6 +9,7 @@
   <PropertyGroup>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <PublishTrimmed>true</PublishTrimmed>
+    <PublishReadyToRun>true</PublishReadyToRun>
     <TrimMode>link</TrimMode>
     <SuppressTrimAnalysisWarnings>false</SuppressTrimAnalysisWarnings>
     <_TrimmerDumpDependencies>true</_TrimmerDumpDependencies>
